--- a/src/components/ProductsContainer/MainContainer.css
+++ b/src/components/ProductsContainer/MainContainer.css
@@ -33,6 +33,22 @@
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 50px;
 }
+.cart-container .cart-button-group {
+  margin-top: 150px;
+}
+.cart-container .cart-button-group button {
+  background-color: #e07c24;
+  color: #fff;
+  width: 50%;
+  margin: 10px auto;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
 .product-container {
   padding: 0px 50px;
 }
@@ -44,6 +60,7 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
 }
+
 @media (max-width: 992px) {
   .shop-container {
     display: block;
