--- a/src/components/ProductsContainer/MainContainer.css
+++ b/src/components/ProductsContainer/MainContainer.css
@@ -61,6 +61,27 @@
   gap: 30px;
 }
 
+/* QA section  */
+.qa-container .qa-title {
+  font-size: 32px;
+  color: #023047;
+}
+.qa-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin: 30px 0;
+}
+.qa-grid img {
+  width: 70%;
+  margin: auto;
+}
+.qa-grid h2 {
+  text-align: left;
+}
+.qa-text {
+  text-align: left;
+}
+
 @media (max-width: 992px) {
   .shop-container {
     display: block;
@@ -73,6 +94,9 @@
   .product-container .products-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+  }
+  .qa-grid {
+    display: block;
   }
 }
 @media (max-width: 680px) {
